# vietqr

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
src/vietqr/: VietQR.py
src/vietqr_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vietqrlib/: VietQR.py  __init__.py
tests/: vietqr_test.py
