[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vietqr-generator"
version = "0.0.4"
authors = [
    { name="Jean Nguyen", email="community@unicube.me" },
]
description = """
    This is the VietQR library which help to generate the VietQR Data String, which align with VietQR specifications. (The current VietQR Specification was announced by Napas on 21 Apr 2021)
"""
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "qrcode[pil]",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/unicubevn/vietqr"
"Bug Tracker" = "https://github.com/unicubevn/vietqr/issues"